--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -10,9 +10,9 @@
   width: 100%;
 
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
+  animation-delay: 0.15s;
   z-index: 20;
 
   &::after {
@@ -58,7 +58,7 @@
   background-color: var(--global-bg-color);
   display: block;
   list-style-type: none;
-  white-space: nowrap;
+  white-space: normal;
 
   &--lg {
     padding-right: 2em;
